--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
 Flask==3.0.0
 flask-cors==4.0.0
-youtube-transcript-api==1.2.2
 firecrawl-py==1.5.0
 gunicorn==21.2.0
-PySocks==1.7.1
 requests==2.31.0
+python-dotenv==1.0.0
